Upgrade to Java 21, remove redundant packages like guava, upgrade node + yarn