@@ -1,6 +1,6 @@
 /*
     finmgr - A financial transaction framework
-    Copyright (C) 2021 Kennedy Software Solutions Inc.
+    Copyright (C) 2024 Kennedy Software Solutions Inc.
 
     This program is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
@@ -18,9 +18,6 @@
 package sh.kss.finmgr.lib.entity.transaction;
 
 
-import com.google.common.collect.ArrayListMultimap;
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ListMultimap;
 import org.javamoney.moneta.Money;
 import org.junit.jupiter.api.Test;
 import org.slf4j.Logger;
@@ -29,7 +26,10 @@ import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.validation.BeanPropertyBindingResult;
 import org.springframework.validation.Errors;
 
+import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
@@ -42,7 +42,7 @@ public class InvestmentTransactionTest extends TransactionTest {
 
     private final InvestmentTransactionValidator VALIDATOR = new InvestmentTransactionValidator();
 
-    private final List<InvestmentTransaction> TEST_TRANSACTIONS = ImmutableList.of(
+    private final List<InvestmentTransaction> TEST_TRANSACTIONS = List.of(
         BUY_VTI,
         BUY_VTI_HIGHER_PRICE,
         SELL_VTI,
@@ -91,10 +91,10 @@ public class InvestmentTransactionTest extends TransactionTest {
             .withNetAmount(Money.of(-9_995, CAD));
 
         // Assert spring validator errors
-        ListMultimap<String, String> expectedErrors = ArrayListMultimap.create();
-        expectedErrors.put("netAmount", "currencyInconsistent");
-        expectedErrors.put("netAmount", "netAmountSum");
-        expectedErrors.put("grossAmount", "grossAmountProduct");
+        Map<String, List<String>> expectedErrors = Map.of(
+            "netAmount", List.of("currencyInconsistent", "netAmountSum"),
+            "grossAmount", List.of("grossAmountProduct")
+        );
 
         assertHasErrors(VALIDATOR, inconsistentTransaction, expectedErrors);
     }
@@ -133,8 +133,9 @@ public class InvestmentTransactionTest extends TransactionTest {
             .withSettlementDate(BUY_VTI.getTransactionDate().minusDays(1));
 
         // Assert spring validator errors
-        ListMultimap<String, String> expectedErrors = ArrayListMultimap.create();
-        expectedErrors.put("settlementDate", "settledBeforeTransaction");
+        Map<String, List<String>> expectedErrors = Map.of(
+            "settlementDate", List.of("settledBeforeTransaction")
+        );
 
         assertHasErrors(VALIDATOR, badSettlementDateTransaction, expectedErrors);
     }
@@ -151,9 +152,10 @@ public class InvestmentTransactionTest extends TransactionTest {
             .withGrossAmount(Money.of(-10_001, USD));
 
         // Assert spring validator errors
-        ListMultimap<String, String> expectedErrors = ArrayListMultimap.create();
-        expectedErrors.put("grossAmount", "grossAmountProduct");
-        expectedErrors.put("netAmount", "netAmountSum");
+        Map<String, List<String>> expectedErrors = Map.of(
+            "grossAmount", List.of("grossAmountProduct"),
+            "netAmount", List.of("netAmountSum")
+        );
 
         assertHasErrors(VALIDATOR, invalidGrossAmountTransaction, expectedErrors);
     }
@@ -170,8 +172,9 @@ public class InvestmentTransactionTest extends TransactionTest {
             .withNetAmount(Money.of(-10_004, USD));
 
         // Assert spring validator errors
-        ListMultimap<String, String> expectedErrors = ArrayListMultimap.create();
-        expectedErrors.put("netAmount", "netAmountSum");
+        Map<String, List<String>> expectedErrors = Map.of(
+            "netAmount", List.of("netAmountSum")
+        );
 
         assertHasErrors(VALIDATOR, invalidNetAmountTransaction, expectedErrors);
     }
@@ -188,9 +191,10 @@ public class InvestmentTransactionTest extends TransactionTest {
             .withCommission(Money.of(5, USD));
 
         // Assert spring validator errors
-        ListMultimap<String, String> expectedErrors = ArrayListMultimap.create();
-        expectedErrors.put("commission", "commissionPositive");
-        expectedErrors.put("netAmount", "netAmountSum");
+        Map<String, List<String>> expectedErrors = Map.of(
+            "commission", List.of("commissionPositive"),
+            "netAmount", List.of("netAmountSum")
+        );
 
         assertHasErrors(VALIDATOR, invalidNetAmountTransaction, expectedErrors);
     }
