@@ -1,6 +1,6 @@
 /*
     finmgr - A financial transaction framework
-    Copyright (C) 2021 Kennedy Software Solutions Inc.
+    Copyright (C) 2024 Kennedy Software Solutions Inc.
 
     This program is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
@@ -17,7 +17,6 @@
  */
 package sh.kss.finmgr.lib.operation;
 
-import com.google.common.collect.ImmutableList;
 import org.javamoney.moneta.Money;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -106,7 +105,7 @@ public class NetPresentValueTest extends FinmgrTest {
 
         // Buy and sell same quantity of same security
         Map<LocalDate, Map<AccountType, Map<String, Map<Security, MonetaryAmount>>>> result = dailyOperationsTest(
-            ImmutableList.of(
+            List.of(
                 BUY_VTI,
                 SELL_VTI_LATER
             ),
@@ -151,7 +150,7 @@ public class NetPresentValueTest extends FinmgrTest {
 
         // Buy and sell same quantity of same security
         Map<LocalDate, Map<AccountType, Map<String, Map<Security, MonetaryAmount>>>> result = dailyOperationsTest(
-            ImmutableList.of(
+            List.of(
                 BUY_VTI,
                 BUY_VTI_TFSA
             ),
